Add OpenGraph metadata

--- a/index.html
+++ b/index.html
@@ -5,7 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="OpenResearchKit helps teams run real-world behavioral intervention research with one-sec style friction design and reproducible data workflows."
+      content="OpenResearchKit is a framework for building, deploying, and evaluating behavior-change interventions with privacy-preserving, anonymous-yet-matchable research data pipelines."
+    />
+    <link rel="canonical" href="https://openresearchkit.org/" />
+    <meta property="og:site_name" content="OpenResearchKit" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="OpenResearchKit" />
+    <meta
+      property="og:description"
+      content="Build and evaluate behavior-change interventions with friction mechanics, privacy-preserving telemetry, and anonymous-yet-matchable participant and survey data."
+    />
+    <meta property="og:url" content="https://openresearchkit.org/" />
+    <meta
+      property="og:image"
+      content="https://openresearchkit.org/images/one-sec-demo-poster.png"
+    />
+    <meta
+      property="og:image:alt"
+      content="OpenResearchKit intervention preview on a smartphone."
+    />
+    <meta property="og:image:width" content="2000" />
+    <meta property="og:image:height" content="3000" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="OpenResearchKit" />
+    <meta
+      name="twitter:description"
+      content="Build and evaluate behavior-change interventions with friction mechanics and privacy-preserving, anonymous-yet-matchable research workflows."
+    />
+    <meta
+      name="twitter:image"
+      content="https://openresearchkit.org/images/one-sec-demo-poster.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="OpenResearchKit intervention preview on a smartphone."
     />
     <title>OpenResearchKit</title>
   </head>
