Adjust open source badge style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="OpenResearchKit is a framework for building, deploying, and evaluating behavior-change interventions with privacy-preserving, anonymous-yet-matchable research data pipelines."
+      content="OpenResearchKit provides open-source data collection and study infrastructure with cutting-edge research techniques for on-device processing, in-app surveys, and UUID-based matching between app metadata and survey responses."
     />
     <link rel="canonical" href="https://openresearchkit.org/" />
     <meta property="og:site_name" content="OpenResearchKit" />
@@ -14,7 +14,7 @@
     <meta property="og:title" content="OpenResearchKit" />
     <meta
       property="og:description"
-      content="Build and evaluate behavior-change interventions with friction mechanics, privacy-preserving telemetry, and anonymous-yet-matchable participant and survey data."
+      content="Open-source study infrastructure with cutting-edge research techniques for on-device processing, in-app surveys, and UUID-based matching between app metadata and survey responses."
     />
     <meta property="og:url" content="https://openresearchkit.org/" />
     <meta
@@ -31,7 +31,7 @@
     <meta name="twitter:title" content="OpenResearchKit" />
     <meta
       name="twitter:description"
-      content="Build and evaluate behavior-change interventions with friction mechanics and privacy-preserving, anonymous-yet-matchable research workflows."
+      content="Open-source study infrastructure with cutting-edge research techniques for on-device processing, in-app surveys, and UUID-based matching between app metadata and survey responses."
     />
     <meta
       name="twitter:image"
